# ppx_deriving_binary_bytes

./: README.md  dune-project  index.html  ppx_deriving_binary.opam  ppx_deriving_binary_bytes.opam
.github/workflows/: gh-pages.yaml  ocaml.yaml
git/: pre-commit.sh
ppx_deriving_binary_bytes/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__/Astmisc/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__/Bitfield/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__/Decoder/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__/Encoder/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__/Variant/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__Astmisc/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__Bitfield/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__Decoder/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__Encoder/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes__Variant/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime/BytesBuffer/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__BytesBuffer/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__CString/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__GreedyList/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__GreedyString/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__PrefixedList/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__PrefixedString/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__Printer/: index.html
ppx_deriving_binary_bytes/Ppx_deriving_binary_bytes_runtime__Std/: index.html
src/ppx/: astmisc.ml  bitfield.ml  decoder.ml  dune  encoder.ml  ppx_deriving_binary.ml  ppx_deriving_binary_bytes.ml  variant.ml
src/runtime/: bytesBuffer.ml  bytesBuffer.mli  cString.ml  dune  greedyList.ml  greedyString.ml  prefixedList.ml  prefixedString.ml  printer.ml  std.ml
tests/ppx/: dune  runtest.ml  test_binary_bytes_of.ml  test_of_binary_bytes.ml
tests/runtime/: dune  runtest.ml  test_BytesBuffer.ml  test_CString.ml  test_GreedyList.ml  test_PrefixedList.ml  test_PrefixedString.ml
(+7 files in other folders)
