opam-version: "2.0"
synopsis: "Type-driven generation of binary serializers and deserializers"
maintainer: ["Akinori Abe"]
authors: ["Akinori Abe"]
license: "MIT"
homepage: "https://github.com/akabe/ppx_deriving_binary_bytes"
bug-reports: "https://github.com/akabe/ppx_deriving_binary_bytes/issues"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.10.0"}
  "base-threads"
  "base-unix"
  "ppx_deriving" {>= "5.0.0"}
  "dune" {build & >= "1.0.0"}
  "ounit2" {with-test & >= "2.0.0"}
]
